# GIFinator

./: README.md
app/: CMakeLists.txt  build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/somendrasaini/internetgifcreator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/somendrasaini/internetgifcreator/: MainActivity.kt
app/src/main/java/com/somendrasaini/internetgifcreator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/python/: download_streams.py  get_streams.py  nonyt_download.py
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/font/: product_sans.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/somendrasaini/internetgifcreator/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
